# sztehlo-pico-gameboy

./: LICENSE  README.md
src-c/: CMakeLists.txt
src-c/lib/: display.c  display.h  sztehlo-libs.cmake
src-c/shell/: CMakeLists.txt  shell.c  shell.h
src-picopad/: .gitignore  Makefile.inc  _setup.bat  c_all_devices.bat  config_def.h  includes.h
src-picopad/PicoPad/: c_all_devices.bat
src-picopad/PicoPad/EMU/GBC/src/: main.cpp
src-picopad/PicoPad/MP3/MP3/src/: main.h
src-picopad/PicoPad/PAINTER/PAINTER/src/: main.h
src-picopad/_boot2/: Makefile  c_all.bat
src-picopad/_boot2/pico_rp2350/: asm_helper.S
src-picopad/_devices/: key.h
src-picopad/_devices/picopad/: _config.h  _makefile.inc  picopad_init.c  picopad_key.c  picopad_ss.c
src-picopad/_display/: Readme.txt  _include.h  _makefile.inc  display.c
src-picopad/_display/st7789/: st7789.c
src-picopad/_font/: font_boldB_8x14.c  font_boldB_8x16.c  font_bold_8x14.c  font_bold_8x16.c  font_bold_8x16_win1250.c  font_bold_8x8.c  font_cond_6x8.c  font_game_8x8.c  font_italic_8x8.c  font_thin_8x8.c  font_tiny_5x8.c
src-picopad/_lib/src/: lib_canvas.c  lib_print.c  lib_video.c
src-picopad/_loader/: loader_picopad20.S
src-picopad/_loader/LOADER/LOADER/: c_all_devices.bat  config.h
src-picopad/_loader/LOADER/LOADER/src/: main.cpp  main.h
src-picopad/_sdk/inc/: sdk_psram.h
